# NetSimCpp

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  storage_types.hpp  types.hpp
src/: helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
test/: test_nodes.cpp  test_package.cpp
